--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ node_js:
   - "0.10"
 services:
   - mongodb
-before_script:
- - chmod +x build.sh
- script:
- - build.sh  
-
+before_script:  
+  - chmod +x build.sh
+script: ./build.sh
