--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "debug" : "~0.7.4",
     "jade" : "~1.3.0",
     "schema-inspector":"~1.4.2",
+    "moment":"~2.7.0",
     "mongodb": "~1.4.5"
   },
   "keywords" : [ ],
